# AlBurhan

./: .gitignore  E156-PROTOCOL.md  README.md  index.html  push.sh  pyproject.toml  review-findings.md
.github/workflows/: test.yml
alburhan/: __init__.py  cli.py  plots.py  reporting.py
alburhan/core/: orchestrator.py
alburhan/engines/: __init__.py  africarct.py  almizan.py  bayesian.py  causalsynth.py  dose_response.py  drift.py  e156.py  evolution.py  forensics.py  fragility.py  grade.py  metafrontier.py  metareg.py  nma.py  predictiongap.py  prisma.py  pubbias.py  rob.py  robust.py  sequential.py  synthesis.py
alburhan/ingest/: aact.py  ctgov.py  parser.py
docs/superpowers/plans/: 2026-04-07-advanced-stats-upgrade.md
e156-submission/: config.json  paper.json  protocol.md
tests/: test_bayesian.py  test_dose_response.py  test_engines.py  test_grade.py  test_ingest.py  test_integration.py  test_metareg.py  test_plots.py  test_prisma.py  test_pubbias.py  test_rob.py  test_robust.py  test_sequential.py
