[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alburhan"
version = "0.1.0"
description = "Universal Evidence Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "click>=8.0,<9"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
alburhan = "alburhan.cli:main"
